- Added header 'X-Skip-PO' to allow skipping the call to protect/unprotect when invoking a service in the external domain through the Broker. The value of the header must be 'true'.
